--- a/Source/Common/Projects/NTDirectX/Color.cls
+++ b/Source/Common/Projects/NTDirectX/Color.cls
@@ -13,48 +13,66 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 Option Explicit
 
-Private pAlpha As Integer
-Private pRed As Integer
-Private pGreen As Integer
-Private pBlue As Integer
+Private pAlpha As Single
+Private pRed As Single
+Private pGreen As Single
+Private pBlue As Single
 Public Event Changed()
 
 Public Property Get Serialize() As Boolean
 Attribute Serialize.VB_MemberFlags = "40"
     Serialize = True
 End Property
-
-Public Property Get RGB() As Long
-    RGB = VBA.RGB(pRed, pGreen, pBlue)
+Public Property Get RGBA() As Long
+    RGBA = D3DColorRGBA(red * 255, green * 255, blue * 255, Alpha)
 End Property
-Public Property Get Alpha() As Integer
+
+Public Property Let RGB(ByVal RHS As Long)
+    Dim r As Long
+    Dim g As Long
+    Dim b As Long
+    
+    ConvertColor CLng(RHS), r, g, b
+    pRed = CSng(r) / 255
+    pGreen = CSng(g) / 255
+    pBlue = CSng(b) / 255
+    
+'    pRed = rgbRed(RHS) / 255
+'    pGreen = rgbGreen(RHS) / 255
+'    pBlue = rgbBlue(RHS) / 255
+End Property
+Public Property Get RGB() As Long
+    RGB = VBA.RGB(pRed * 255, pGreen * 255, pBlue * 255)
+End Property
+
+Public Property Get Alpha() As Single
     Alpha = pAlpha
 End Property
-Public Property Let Alpha(ByVal RHS As Integer)
+Public Property Let Alpha(ByVal RHS As Single)
     pAlpha = RHS
     RaiseEvent Changed
 End Property
  
-Public Property Get Red() As Integer
-    Red = pRed
+Public Property Get red() As Single
+    red = pRed
 End Property
-Public Property Let Red(ByVal RHS As Integer)
+Public Property Let red(ByVal RHS As Single)
     pRed = RHS
     RaiseEvent Changed
 End Property
  
-Public Property Get Green() As Integer
-    Green = pGreen
+Public Property Get green() As Single
+    green = pGreen
 End Property
-Public Property Let Green(ByVal RHS As Integer)
+Public Property Let green(ByVal RHS As Single)
     pGreen = RHS
     RaiseEvent Changed
 End Property
  
-Public Property Get Blue() As Integer
-    Blue = pBlue
+Public Property Get blue() As Single
+    blue = pBlue
 End Property
-Public Property Let Blue(ByVal RHS As Integer)
+Public Property Let blue(ByVal RHS As Single)
     pBlue = RHS
     RaiseEvent Changed
 End Property
@@ -64,10 +82,16 @@ Public Property Let ToString(ByVal RHS As String)
     RHS = Trim(RHS)
     If Left(RHS, 1) = "[" And Right(RHS, 1) = "]" Then
         RHS = Mid(RHS, 2, Len(RHS) - 2)
-        pAlpha = ParseNumerical(RHS)
         pRed = ParseNumerical(RHS)
-        pGreen = ParseNumerical(RHS)
-        pBlue = ParseNumerical(RHS)
+        If RHS <> "" Then
+            pGreen = ParseNumerical(RHS)
+            If RHS <> "" Then
+                pBlue = ParseNumerical(RHS)
+                If RHS <> "" Then
+                    pAlpha = ParseNumerical(RHS)
+                End If
+            End If
+        End If
     End If
 
     RaiseEvent Changed
@@ -75,5 +99,9 @@ End Property
 Public Property Get ToString() As String
 Attribute ToString.VB_UserMemId = 0
 Attribute ToString.VB_MemberFlags = "640"
-    ToString = "[ " & pAlpha & " , " & pRed & ", " & pGreen & ", " & pBlue & "]"
+    ToString = "[ " & pRed & " , " & pGreen & ", " & pBlue & ", " & pAlpha & "]"
 End Property
+
+Private Sub Class_Initialize()
+    Alpha = 1
+End Sub
