--- a/Source/Common/Projects/NTDirectX/Camera.cls
+++ b/Source/Common/Projects/NTDirectX/Camera.cls
@@ -31,20 +31,20 @@ End Property
 
 Public Function ToString() As String
 
-    If Not Camera.Planet Is Nothing Then
-        If Planets.Exists(Camera.Planet.Key) Then
-            ToString = ToString & Include.URLEncode("Set Camera.Planet = Planets(""" & Camera.Planet.Key & """)") & vbCrLf
+    If Not pPlanet Is Nothing Then
+        If Planets.Exists(pPlanet.Key) Then
+            ToString = ToString & Include.URLEncode("Set Camera.Planet = Planets(""" & pPlanet.Key & """)") & vbCrLf
         End If
     End If
-    If Not Camera.Player Is Nothing Then
-        If Molecules.Exists(Camera.Player.Key) Then
-            ToString = ToString & Include.URLEncode("Set Camera.Player = Molecules(""" & Camera.Player.Key & """)") & vbCrLf
-            ToString = ToString & Include.URLEncode("Camera.Player.Origin.ToString = """ & Camera.Player.Origin.ToString & """") & vbCrLf
-            ToString = ToString & Include.URLEncode("Camera.Player.Rotate.ToString = """ & Camera.Player.Rotate.ToString & """") & vbCrLf
+    If Not pPlayer Is Nothing Then
+        If Molecules.Exists(pPlayer.Key) Then
+            ToString = ToString & Include.URLEncode("Set Camera.Player = Molecules(""" & pPlayer.Key & """)") & vbCrLf
+            ToString = ToString & Include.URLEncode("Camera.Player.Origin.ToString = """ & pPlayer.Origin.ToString & """") & vbCrLf
+            ToString = ToString & Include.URLEncode("Camera.Player.Rotate.ToString = """ & pPlayer.Rotate.ToString & """") & vbCrLf
         End If
     End If
 
-    ToString = ToString & Include.URLEncode("Camera.Color = " & Camera.color) & vbCrLf
+    ToString = ToString & Include.URLEncode("Camera.Color = " & pColor) & vbCrLf
     ToString = ToString & Include.URLEncode("Camera.Serialize = True") & vbCrLf
 
     ToString = "  <Camera>" & vbCrLf & ToString & vbCrLf & "</Camera>" & vbCrLf
